feat: support kubeconfig validate api
